Ensure summary statistics do not overflow their container

--- a/src/assets/summary.css
+++ b/src/assets/summary.css
@@ -3,11 +3,12 @@
     background-color: #488a99;
     border-radius: 10px;
     padding: 1px;
-    border: 2px solid white;
     margin: 1px;
     margin-bottom: 10px;
     height: 15vh;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border: 5px solid #488a99; 
+    border-radius: 8px;
 }
 
 /* Summary Card Styling */
@@ -35,4 +36,12 @@
 
 .summary-card h5, .summary-card h4 {
     color: white;
+}
+
+.centered-card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
